# Gestionnaire-de-Bourse-ALPE

./: .env.production.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  PLAN.md  README.md  TODO-US-001.md  TODO-US-002.md  TODO-US-006.md  TODO-US-007.md  TODO-US-008.md  TODO-US-010.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: __init__.py  app_setting.py  article.py  audit_log.py  base.py  billetweb_import_log.py  deposit_slot.py  edition.py  edition_depositor.py  item_list.py  payout.py  sale.py  ticket.py  user.py
backend/app/repositories/: __init__.py  app_setting.py  article.py  billetweb_import_log.py  deposit_slot.py  edition.py  edition_depositor.py  item_list.py  payout.py  sale.py  ticket.py  user.py
backend/app/schemas/: __init__.py  article.py  audit.py  auth.py  billetweb.py  billetweb_api.py  common.py  deposit_slot.py  edition.py  invitation.py  invitation_stats.py  item_list.py  label.py  payout.py  sale.py  ticket.py  user.py
backend/app/services/: __init__.py  article.py  audit.py  auth.py  billetweb_client.py  billetweb_import.py  billetweb_sync.py  closure_report_pdf.py  edition.py  email.py  gdpr.py  invitation.py  invitation_excel.py  item_list.py  label.py  payout.py  payout_excel.py  payout_pdf.py  pdf.py  review.py  sale.py  settings.py  ticket.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  20251229_2144_690407843e84_add_invitation_hidden_field.py  20251230_1444_0c6f307a36fe_add_deposit_slots_table.py  20251231_0001_add_billetweb_import_tables.py  20260107_2117_4e864f16a3e3_add_subcategory_and_gender_to_articles.py  20260107_2213_6b986b51f28e_reduce_description_length_to_100.py  20260208_2158_1df8f095c0e1_add_edition_closure_fields.py  20260209_1400_add_gdpr_fields_to_users.py  20260209_1430_add_audit_logs_table.py  20260209_1536_83e8c2ace695_add_is_private_sale_to_sales.py  20260212_1000_add_billetweb_api_integration.py  20260212_2116_01471ce9d0ae_add_invitation_sent_at_to_edition_.py  20260212_drop_sale_datetime_columns.py  20260222_1819_5dca53c264e1_remove_conformity_certified_from_.py  20260223_1823_2ac229d84aaa_add_is_training_and_is_tester_flags.py  20260223_2200_rename_edition_statuses.py  20260224_1400_add_article_review_fields.py  20260225_2300_a60bd3adef40_add_ticket_id_to_sales.py  20260227_1000_add_tickets_tables.py
backend/scripts/: seed.py  seed_articles.py  seed_closure.py  seed_payouts.py  seed_sales.py
backend/tests/: conftest.py
backend/tests/fixtures/: billetweb_duplicates.csv  billetweb_invalid_data.csv  billetweb_missing_columns.csv  billetweb_unpaid.csv  billetweb_valid.csv
backend/tests/integration/: test_auth_api.py  test_billetweb_api.py  (+4 more)
(+277 files in other folders)
